feat: update order and payment test